--- a/views/index.html
+++ b/views/index.html
@@ -5,10 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>InovaTech</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="home.css" />
     <script src="main.js"></script>
   </head>
   <body>
-    <h1>A inovatech é a número em inovação no mercado!</h1>
+    <header>
+      <div class="textos-header">
+        <a href="">Home</a>
+        <a href="">Quem Somos</a>
+        <a href="">Parceirias</a>
+        <a href="contato.html">Contatos</a>
+        <a href="">Serviços</a>
+      </div>
+      <a href="../views/index.html"
+        ><img src="../static/img/logo.png" alt="inovatech logo"
+      /></a>
+    </header>
+    <main>
+      <h1>A inovatech é a número em inovação no mercado!</h1>
+
+      <h3>Nossos principais projetos</h3>
+    </main>
+
+    <footer>
+      <div class="textos-footer">
+        <div>
+          <h1>Inovatech</h1>
+          <h2>
+            Chegou a hora de dar vida ao seu projeto. Conte com a nossa
+            expertise. Vamos conversar?
+          </h2>
+          <button>Entre em contato</button>
+          <p class="aviso">
+            Esse projeto foi feito durante o processo trainee.
+          </p>
+        </div>
+        <div class="footer-informaçao">
+          <div>
+            <p>Email:</p>
+            <p>inovatech@gmail.com</p>
+          </div>
+          <div>
+            <p>Telefone:</p>
+            <p>(61) 97887-1209</p>
+          </div>
+          <div>
+            <p>Instagram:</p>
+            <p>inova.tech</p>
+          </div>
+          <div>
+            <p>Tiktok:</p>
+            <p>inova.techoficial</p>
+          </div>
+        </div>
+      </div>
+      <div class="footer-links">
+        <a href="index.html">Home</a>
+        <a href="">Quem Somos</a>
+        <a href="">Parceirias</a>
+        <a href="contato.html">Contatos</a>
+        <a href="">Serviços</a>
+      </div>
+    </footer>
   </body>
 </html>
