--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>InovaTech</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="home.css" />
+    <link rel="stylesheet" href="../static/styles/main.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="../static/styles/home.css"
+    />
     <script src="main.js"></script>
   </head>
   <body>
@@ -22,9 +28,19 @@
       /></a>
     </header>
     <main>
-      <h1>A inovatech é a número em inovação no mercado!</h1>
+      <section class="banner1">
+        <div class="box-mensagem">
+          <h1 class="mensagem-1">
+            A inovatech é a número em inovação no mercado!
+          </h1>
+          <div class="retangulo">
+            <div class="quadrado"></div>
+          </div>
+          <h3 class="mensagem-2">Nossos principais projetos</h3>
+        </div>
+      </section>
 
-      <h3>Nossos principais projetos</h3>
+      <section class="banner2"></section>
     </main>
 
     <footer>
