--- a/views/contato.html
+++ b/views/contato.html
@@ -1,106 +1,112 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="../static/img/logo.png" />
+    <link rel="stylesheet" href="../static/styles/main.css" />
+    <link rel="stylesheet" href="../static/styles/contato.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Contatos</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../static/img/logo.png">
-    <link rel="stylesheet" href="../static/styles/main.css">
-    <link rel="stylesheet" href="../static/styles/contato.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    <title>Contatos </title>
-</head>
-
-<body>
+  <body>
     <header>
-        <div class="textos-header">
-            <a href="">Home</a>
-            <a href="">Quem Somos</a>
-            <a href="">Parceirias</a>
-            <a href="contato.html">Contatos</a>
-            <a href="">Serviços</a>
-        </div>
-        <a href="../views/index.html"><img src="../static/img/logo.png" alt="inovatech logo"></a>
+      <div class="textos-header">
+        <a href="">Home</a>
+        <a href="">Quem Somos</a>
+        <a href="">Parceirias</a>
+        <a href="contato.html">Contatos</a>
+        <a href="">Serviços</a>
+      </div>
+      <a href="../views/index.html"
+        ><img src="../static/img/logo.png" alt="inovatech logo"
+      /></a>
     </header>
 
     <main>
-        <h1 class="titulo">Contatos</h1>
-        <div class="informaçoes">
-            <div class="email-telefone">
-                <p>Email corporativo:</p>
-                <div class="texto-logo">
-                    <img src="../static/img/email 1.svg" alt="email">
-                    <p>inovatech@gmail.com</p>
-                </div>
-                <p>Telefone:</p>
-                <div class="texto-logo">
-                    <img src="../static/img/whatsapp 1.svg" alt="telefone inovatech">
-                    <p>(61) 97887-1209</p>
-                </div>
-            </div>
-            <div class="redes-sociais">
-                <p>Redes Sociais:</p>
-                <div class="texto-logo">
-                    <img src="../static/img/instagram 1.svg" alt="instagram">
-                    <p>inova.tech</p>
-                </div>
-                <div class="texto-logo">
-                    <img src="../static/img/tiktok 1.svg" alt="">
-                    <p>inova.techoficial</p>
-                </div>
-            </div>
+      <h1 class="titulo">Contatos</h1>
+      <div class="informaçoes">
+        <div class="email-telefone">
+          <p>Email corporativo:</p>
+          <div class="texto-logo">
+            <img src="../static/img/email 1.svg" alt="email" />
+            <p>inovatech@gmail.com</p>
+          </div>
+          <p>Telefone:</p>
+          <div class="texto-logo">
+            <img src="../static/img/whatsapp 1.svg" alt="telefone inovatech" />
+            <p>(61) 97887-1209</p>
+          </div>
         </div>
+        <div class="redes-sociais">
+          <p>Redes Sociais:</p>
+          <div class="texto-logo">
+            <img src="../static/img/instagram 1.svg" alt="instagram" />
+            <p>inova.tech</p>
+          </div>
+          <div class="texto-logo">
+            <img src="../static/img/tiktok 1.svg" alt="" />
+            <p>inova.techoficial</p>
+          </div>
+        </div>
+      </div>
 
-        <form>
-            <h1>Entre em contato com a gente:</h1>
-            <div class="form-informaçao">
-                <input type="text" required placeholder="Nome">
-                <input type="email" required placeholder="Email">
-            </div>
-            <textarea class="mensagem" required placeholder="Mensagem"></textarea>
-            <button>Enviar formulário</button>
-        </form>
-        
+      <form>
+        <h1>Entre em contato com a gente:</h1>
+        <div class="form-informaçao">
+          <input type="text" required placeholder="Nome" />
+          <input type="email" required placeholder="Email" />
+        </div>
+        <textarea class="mensagem" required placeholder="Mensagem"></textarea>
+        <button>Enviar formulário</button>
+      </form>
     </main>
 
     <footer>
-        <div class="textos-footer">
-            <div>
-                <h1>Inovatech</h1>
-                <h2>Chegou a hora de dar vida ao seu projeto. Conte com a nossa expertise. Vamos conversar?</h2>
-                <button>Entre em contato</button>
-                <p class="aviso">Esse projeto foi feito durante o processo trainee.</p>
-            </div>
-            <div class="footer-informaçao">
-                <div>
-                    <p>Email:</p>
-                    <p>inovatech@gmail.com</p>
-                </div>
-                <div>
-                    <p>Telefone:</p>
-                    <p>(61) 97887-1209</p>
-                </div>
-                <div>
-                    <p>Instagram:</p>
-                    <p>inova.tech</p>
-                </div>
-                <div>
-                    <p>Tiktok:</p>
-                    <p>inova.techoficial</p>
-                </div>
-            </div>
+      <div class="textos-footer">
+        <div>
+          <h1>Inovatech</h1>
+          <h2>
+            Chegou a hora de dar vida ao seu projeto. Conte com a nossa
+            expertise. Vamos conversar?
+          </h2>
+          <button>Entre em contato</button>
+          <p class="aviso">
+            Esse projeto foi feito durante o processo trainee.
+          </p>
         </div>
-        <div class="footer-links">
-            <a href="index.html">Home</a>
-            <a href="">Quem Somos</a>
-            <a href="">Parceirias</a>
-            <a href="contato.html">Contatos</a>
-            <a href="">Serviços</a>
+        <div class="footer-informaçao">
+          <div>
+            <p>Email:</p>
+            <p>inovatech@gmail.com</p>
+          </div>
+          <div>
+            <p>Telefone:</p>
+            <p>(61) 97887-1209</p>
+          </div>
+          <div>
+            <p>Instagram:</p>
+            <p>inova.tech</p>
+          </div>
+          <div>
+            <p>Tiktok:</p>
+            <p>inova.techoficial</p>
+          </div>
         </div>
+      </div>
+      <div class="footer-links">
+        <a href="index.html">Home</a>
+        <a href="">Quem Somos</a>
+        <a href="">Parceirias</a>
+        <a href="contato.html">Contatos</a>
+        <a href="">Serviços</a>
+      </div>
     </footer>
-
-</body>
-
+  </body>
 </html>
