feat: adicionando retangulo com as imagens dos projetos

--- a/views/index.html
+++ b/views/index.html
@@ -29,16 +29,15 @@
     </header>
     <main>
       <section class="banner1">
-        <div class="box-mensagem">
           <h1 class="mensagem-1">
             A inovatech é a número em inovação no mercado!
-          </h1>
+            </h1>
         </div>
         <div class="container">
-          <div class="aura-IA"></div>
-          <div class="civitas"></div>
-          <div class="secure"></div>
-          <div class="nexus"></div>
+          <div class="aura-IA"> <img src="../static/img/aura.png" alt="aura"></div>
+          <div class="civitas"><img src="/static/img/civitas.png" alt="civitas"></div>
+          <div class="secure"><img src="/static/img/bank.png" alt="bank"></div>
+          <div class="nexus"><img src="/static/img/nexus.png" alt="nexus"></div>
         </div>
       </section>
 
