--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -29,35 +29,26 @@ main {
 }
 
 .banner1 {
+  position: relative;
   min-height: 85vh; /* ajuste conforme necessário */
   height: 933px;
   background-image: url("../img/fundo\ 1.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  display: flex;
   align-items: center;
   justify-content: center;
+  display: flex;
 }
 
 /* banner inferior */
 .banner2 {
-  min-height: 95vh;
+  min-height: 125vh;
   background-image: url("../img/fundo\ 2.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.box-mensagem {
-  align-items: center;
-  width: 62%;
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
+  display: block;
 }
 
 .mensagem-1 {
@@ -69,7 +60,6 @@ main {
   font-weight: 700;
   line-height: normal;
   letter-spacing: 10.8px;
-  margin: 0;
 }
 
 .mensagem-2 {
@@ -84,8 +74,37 @@ main {
 }
 
 .container {
-  margin-top: auto;
+  position: absolute;
+  bottom: 0;
+  left: 0;
   width: 100%;
   height: 32%;
   background-color: var(--verde-cor-2);
+
+  display: flex;
+  align-items: center;       
+  justify-content: center;   
+  gap: 137px;                 
+  padding: 24px auto 106px 106px;             
+  box-sizing: border-box;
+}
+
+.container > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.container img {
+  display: block;
+  width: auto;
+  max-height: 204px;   
+  max-width: 100%;
+  object-fit: contain;
+}
+
+.aura {
+  width: 204px;
+  height: 204px;
 }
