--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -30,18 +30,16 @@ main {
 
 .banner1 {
   position: relative;
-  min-height: 85vh; /* ajuste conforme necessário */
+  min-height: 85vh;
   height: 933px;
   background-image: url("../img/fundo\ 1.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  align-items: center;
   justify-content: center;
   display: flex;
 }
 
-/* banner inferior */
 .banner2 {
   min-height: 125vh;
   background-image: url("../img/fundo\ 2.png");
@@ -49,11 +47,12 @@ main {
   background-position: center;
   background-repeat: no-repeat;
   display: block;
+  margin-bottom: 0;
 }
 
 .mensagem-1 {
+  margin: 300px 0 0 0;
   color: #fff;
-  text-align: center;
   font-family: var(--fonte-texto);
   font-size: 36px;
   font-style: normal;
@@ -62,16 +61,19 @@ main {
   letter-spacing: 10.8px;
 }
 
-.mensagem-2 {
-  margin-top: 698px;
+.subtitulo {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: calc(32% + 16px); 
+  margin: 0;
   color: #fff;
-  text-align: center;
   font-family: var(--fonte-texto);
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  font-size: 28px; 
+  font-weight: 500;
+  text-align: center;
 }
+
 
 .container {
   position: absolute;
@@ -80,12 +82,11 @@ main {
   width: 100%;
   height: 32%;
   background-color: var(--verde-cor-2);
-
   display: flex;
-  align-items: center;       
-  justify-content: center;   
-  gap: 137px;                 
-  padding: 24px auto 106px 106px;             
+  align-items: center;
+  justify-content: center;
+  gap: 137px;
+  padding: 36px 106px;
   box-sizing: border-box;
 }
 
@@ -93,18 +94,30 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  flex-direction: column; 
+  gap: 8px;
 }
 
+.container > div p {
+  position: static;           
+  margin: 0 0 8px 0;         
+  color: #fff; 
+  font-family: var(--fonte-texto);
+  font-size: 28px;
+  font-weight: 600;
+  text-align: center;
+  pointer-events: auto;
+}
 
 .container img {
   display: block;
   width: auto;
-  max-height: 204px;   
+  max-height: 204px;
   max-width: 100%;
   object-fit: contain;
+  z-index: 1;
 }
 
-.aura {
-  width: 204px;
-  height: 204px;
-}
+
+
