--- a/views/index.html
+++ b/views/index.html
@@ -29,15 +29,16 @@
     </header>
     <main>
       <section class="banner1">
-          <h1 class="mensagem-1">
-            A inovatech é a número em inovação no mercado!
-            </h1>
+          <p class="mensagem-1">
+            A inovatech é a número 1 <br>em inovação no mercado!
+          </p>
+            <h3 class="subtitulo">Nossos principais projetos</h3>
         </div>
         <div class="container">
-          <div class="aura-IA"> <img src="../static/img/aura.png" alt="aura"></div>
-          <div class="civitas"><img src="/static/img/civitas.png" alt="civitas"></div>
-          <div class="secure"><img src="/static/img/bank.png" alt="bank"></div>
-          <div class="nexus"><img src="/static/img/nexus.png" alt="nexus"></div>
+          <div class="aura-IA"> <p>Aura IA</p><img src="../static/img/aura.png" alt=""></div>
+          <div class="civitas"> <p>Projeto civitas</p><img src="/static/img/civitas.png" alt=""></div>
+          <div class="secure"> <p>SecureBank</p><img src="/static/img/bank.png" alt=""></div>
+          <div class="nexus"> <p>Nexus AR</p><img src="/static/img/nexus.png" alt=""></div>
         </div>
       </section>
 
