--- a/views/servicos.html
+++ b/views/servicos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html> lang="pt-br"
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../static/styles/main.css" />
     <link rel="stylesheet" href="../static/styles/servicos.css" 
-    <link
       rel="stylesheet"
       type="text/css"
       media="screen"
@@ -29,7 +28,35 @@
       /></a>
     </header>
     <main>
-      
+      <section class="servicos">
+        
+        <h1>NOSSOS SERVIÇOS</h1>
+
+        <div class="servicos-grid">
+
+            <article class="servico-card">
+                <img src="../static/img/Desenvolvimento.png" alt="Ícone de Desenvolvimento de Software sob Medida">
+                <h2>Desenvolvimento de Software Sob Medida</h2>
+                <p>Transformamos sua visão em realidade com soluções robustas e escaláveis, 
+                   projetadas exclusivamente para os desafios do seu negócio.</p>
+            </article>
+
+            <article class="servico-card">
+                <img src="../static/img/Solucoes.png" alt="Ícone de Soluções Personalizadas e Aceleração Digital">
+                <h2>Soluções Personalizadas e Aceleração Digital</h2>
+                <p>Impulsionamos sua empresa para o futuro, otimizando processos e 
+                   implementando as ferramentas certas para sua transformação digital.</p>
+            </article>
+
+            <article class="servico-card">
+                <img src="../static/img/Consultoria.png" alt="Ícone de Consultoria Estratégica e Concepção">
+                <h2>Consultoria Estratégica e Concepção</h2>
+                <p>Alinhamos tecnologia à sua estratégia de negócio, criando 
+                   um roadmap claro desde a concepção da ideia até o lançamento do produto.</p>
+            </article>
+
+        </div>
+    </section>
     </main>
 
     <footer>
