feat: adiciona botão funcional no header

--- a/views/servicos.html
+++ b/views/servicos.html
@@ -17,13 +17,13 @@
   <body>
     <header>
       <div class="textos-header">
-        <a href="">Home</a>
-        <a href="">Quem Somos</a>
-        <a href="">Parceirias</a>
-        <a href="contato.html">Contatos</a>
-        <a href="">Serviços</a>
+        <a href="/index.html">Home</a>
+        <a href="/views/quem-somos.html">Quem Somos</a>
+        <a href="/views/parceiros.html">Parceirias</a>
+        <a href="/views/contato.html">Contatos</a>
+        <a href="/views/servicos.html">Serviços</a>
       </div>
-      <a href="../views/index.html"
+      <a href="../index.html"
         ><img src="../static/img/logo.png" alt="inovatech logo"
       /></a>
     </header>
