--- a/views/parceiros.html
+++ b/views/parceiros.html
@@ -18,11 +18,11 @@
 <body>
     <header>
       <div class="textos-header">
-        <a href="index.html">Home</a>
-        <a href="">Quem Somos</a>
-        <a href="parceiros.html">Parceirias</a>
-        <a href="contato.html">Contatos</a>
-        <a href="">Serviços</a>
+        <a href="/index.html">Home</a>
+        <a href="/views/quem-somos.html">Quem Somos</a>
+        <a href="/views/parceiros.html">Parceirias</a>
+        <a href="/views/contato.html">Contatos</a>
+        <a href="/views/servicos.html">Serviços</a>
       </div>
       <a href="../views/index.html"
         ><img src="../static/img/logo.png" alt="inovatech logo"
