--- a/views/quem-somos.html
+++ b/views/quem-somos.html
@@ -13,11 +13,11 @@
   <body>
     <header>
       <div class="textos-header">
-        <a href="index.html">Home</a>
-        <a href="quem-somos.html" class="ativo">Quem Somos</a>
-        <a href="#">Parcerias</a>
-        <a href="contato.html">Contatos</a>
-        <a href="#">Serviços</a>
+        <a href="/index.html">Home</a>
+        <a href="/views/quem-somos.html">Quem Somos</a>
+        <a href="/views/parceiros.html">Parceirias</a>
+        <a href="/views/contato.html">Contatos</a>
+        <a href="/views/servicos.html">Serviços</a>
       </div>
 
       <a href="index.html">
