feat: Adicionada navegabilidade entre paginas

--- a/views/quem-somos.html
+++ b/views/quem-somos.html
@@ -20,7 +20,7 @@
         <a href="/views/servicos.html">Serviços</a>
       </div>
 
-      <a href="index.html">
+      <a href="/index.html">
         <img src="../static/img/logo.png" alt="Inovatech logo" />
       </a>
     </header>
@@ -86,11 +86,11 @@
         </div>
       </div>
       <div class="footer-links">
-        <a href="index.html">Home</a>
+        <a href="/index.html">Home</a>
         <a href="quem-somos.html">Quem Somos</a>
-        <a href="#">Parcerias</a>
+        <a href="parceiros.html">Parcerias</a>
         <a href="contato.html">Contatos</a>
-        <a href="#">Serviços</a>
+        <a href="servicos.html">Serviços</a>
       </div>
     </footer>
   </body>
