--- a/views/servicos.html
+++ b/views/servicos.html
@@ -23,7 +23,7 @@
         <a href="/views/contato.html">Contatos</a>
         <a href="/views/servicos.html">Serviços</a>
       </div>
-      <a href="../index.html"
+      <a href="/index.html"
         ><img src="../static/img/logo.png" alt="inovatech logo"
       /></a>
     </header>
@@ -92,11 +92,11 @@
         </div>
       </div>
       <div class="footer-links">
-        <a href="index.html">Home</a>
-        <a href="">Quem Somos</a>
-        <a href="">Parceirias</a>
+        <a href="/index.html">Home</a>
+        <a href="quem-somos.html">Quem Somos</a>
+        <a href="parceiros.html">Parceirias</a>
         <a href="contato.html">Contatos</a>
-        <a href="">Serviços</a>
+        <a href="servicos.html">Serviços</a>
       </div>
     </footer>
   </body>
