--- a/views/contato.html
+++ b/views/contato.html
@@ -78,7 +78,7 @@
             Chegou a hora de dar vida ao seu projeto. Conte com a nossa
             expertise. Vamos conversar?
           </h2>
-          <button>Entre em contato</button>
+          <button type="button" class="button-contato" onclick="window.location.href='contato.html'">Entre em contato</button>
           <p class="aviso">
             Esse projeto foi feito durante o processo trainee.
           </p>
